chore: create database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/products-api
+spring.datasource.username=postgres
+spring.datasource.password=Postgres2023!
+spring.jpa.hibernate.dll-auto=update
 
+spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
