--- a/.pgsql/compose.yml
+++ b/.pgsql/compose.yml
@@ -13,7 +13,7 @@ services:
       - ./pgdata:/var/lib/postgresql/data
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
+      test: [ "CMD-SHELL", "pg_isready -d  $${POSTGRES_DB}  -U $${POSTGRES_USER}" ]
       interval: 10s
       timeout: 5s
       retries: 5
