refactor: set comments for application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+# spring data source properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/products-api
 spring.datasource.username=postgres
 spring.datasource.password=Postgres2023!
-spring.jpa.hibernate.dll-auto=update
 
-spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
+# spring data jpa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
