feat: improve hibernate's postgres configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,13 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/products-api
 spring.datasource.username=postgres
 spring.datasource.password=Postgres2023!
+spring.datasource.driver-class-name:org.postgresql.Driver
 
 # spring data jpa
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
